# zadanka

./: .clang-format  .clangd  .gitignore  README.md
asd/implementacje/: heapsort.py  heapsort_test.py  mergesort_test.py  quicksort_test.py  radix.py  radix_test.py
asd/sortowania/: zad5.py
asd/zad1/: rozw.nim  rozw.py  t10k.txt  t20k.txt  t50k.txt  z1test.py  zad1-b.py  zad1_gupi_brut.py  zad1_półbrut.py  (+1 more)
cady/: .envrc  Project.toml  flake.nix
julia/: .envrc  Manifest.toml  Project.toml  pluto-run.jl
kompilatory/kolorowanie/: dune  dune-project  grammar.md  scanner.opam
kompilatory/kolorowanie/bck/: bck.ml
kompilatory/kolorowanie/lib/: dune  types.ml  utils.ml
kompilatory/kolorowanie/lua/: adds.lua  init-noc.lua
kompilatory/kolorowanie/test/: dune
kompilatory/kolorowanie/typst_tests/: codes.typ
kryptografia/: Project.toml  baby_kyber.jl  dicts.jl  diffie-hellman.jl  galois.bck.jl  galois.double.jl  galois.jl  galois.one.jl  galois.tuple.jl  tuple_bench.jl
mownit/: .envrc  Project.toml
optymalizacja/: flake.nix
optymalizacja/zadanie1/: meson.build  wersja0.cpp  wersja1.cpp  wersja2.cpp  wersja3.cpp  wersja4.cpp  wersja5.cpp  wersja6.cpp  wersja7.cpp
optymalizacja/zadanie1/tests/: test1.txt  test2.txt  test3.txt  test_100k.txt  test_10k.txt  test_5k.txt
optymalizacja/zadanie2/: .envrc  flake.nix  meson.build  papi_test.c  wersja0.cpp  wersja1.cpp  wersja2.cpp
optymalizacja/zadanie2/test/cases/: case1.txt  case2.txt  case3.txt  case4.txt  case5.txt  case6.txt  case7.txt  cases.md  perf100.txt  perf1000.txt  perf200.txt  perf50.txt  perf500.txt  test_case_0.txt  test_case_6.txt  test_case_E.txt
optymalizacja/zadanie2/test/scripts/: check_numpy.sh  check_program.py  check_program.sh  check_test_case.py  check_tests.sh  check_with_numpy.py  generate.py  numpy_check.py  perf_test.sh
sysopy/: .clang-format  .clangd  .envrc  pack.sh  zad4.md  zad5.md  zad6.md
tw/: .envrc  default.nix
(+452 files in other folders)
