(lang dune 3.15)

(name scanner)

(generate_opam_files true)

; (source
;  (github username/reponame))

(authors "Michał Hemperek")

; (maintainers "Maintainer Name")

; (license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name scanner)
 (synopsis "Simple lua scanner")
 ; (description "A longer description")
 (depends ocaml dune)
 ; (tags
 ;  (topics "to describe" your project))
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
